Fix: UTF8 with BOM

--- a/iOSExcelAccounting/Base.lproj/Main.storyboard
+++ b/iOSExcelAccounting/Base.lproj/Main.storyboard
@@ -405,7 +405,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="q2g-qM-PTZ"/>
+        <segue reference="hKK-gh-uu1"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="DefaultUserPhoto" width="225" height="225"/>
